[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/ui/battle/BattleGUI.gd" type="Script" id=1]
[ext_resource path="res://src/ui/battle/SkillPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/ui/battle/BorderedTurnPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/ui/battle/ActorStatusPanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/ui/battle/actordetails/ActorDetailsPanel.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/graphics/ui/icons/options.png" type="Texture" id=6]
[ext_resource path="res://src/ui/controlswithsound/SoundButton.gd" type="Script" id=8]
[ext_resource path="res://src/ui/battle/ActionMenu.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/ui/battle/GameOptionsPanel.tscn" type="PackedScene" id=10]

[node name="BattleGUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="BorderedTurnPanel" parent="." instance=ExtResource( 3 )]
anchor_right = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -27.0
margin_bottom = 38.0

[node name="CurrentActorStatus" parent="." instance=ExtResource( 4 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -33.0
margin_right = 77.0
margin_bottom = -1.0
size_flags_horizontal = 1

[node name="OtherActorStatus" parent="." instance=ExtResource( 4 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -77.0
margin_top = -33.0
margin_right = -1.0
margin_bottom = -1.0
size_flags_horizontal = 1

[node name="SkillPanel" parent="." instance=ExtResource( 2 )]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -110.0
margin_top = 26.0
margin_right = -1.0
margin_bottom = 50.0

[node name="OptionsButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -25.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = 25.0
icon = ExtResource( 6 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionMenuRegion" type="ReferenceRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 49.0
margin_top = 49.0
margin_right = -49.0
margin_bottom = -74.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionMenu" parent="." instance=ExtResource( 9 )]

[node name="ActorDetailsPanel" parent="." instance=ExtResource( 5 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -54.0
margin_top = -74.0
margin_right = 54.0
margin_bottom = 74.0

[node name="GameOptionsPanel" parent="." instance=ExtResource( 10 )]
visible = false

[connection signal="portrait_pressed" from="CurrentActorStatus" to="." method="_on_CurrentActorStatus_portrait_pressed"]
[connection signal="portrait_pressed" from="OtherActorStatus" to="." method="_on_OtherActorStatus_portrait_pressed"]
[connection signal="cancelled" from="SkillPanel" to="." method="_on_SkillPanel_cancelled"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="attack_selected" from="ActionMenu" to="." method="_on_ActionMenu_attack_selected"]
[connection signal="skill_selected" from="ActionMenu" to="." method="_on_ActionMenu_skill_selected"]
[connection signal="wait_selected" from="ActionMenu" to="." method="_on_ActionMenu_wait_selected"]
